Fix spacing, font sizes and media queries

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,11 +24,14 @@
   --size-300: 0.75rem;
   --size-350: 0.875rem;
   --size-400: 1rem;
+  --size-450: 1.125rem;
   --size-500: 1.25rem;
   --size-600: 2rem;
   --size-700: 2.5rem;
   --size-800: 3rem;
-
+  --size-900: 4rem;
+  --size-1000: 5rem;
+  --size-1100: 6rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -44,6 +47,30 @@
 }
 .fs-400 {
   font-size: var(--size-400);
+}
+.fs-450 {
+  font-size: var(--size-450);
+}
+.fs-500 {
+  font-size: var(--size-500);
+}
+.fs-600 {
+  font-size: var(--size-600);
+}
+.fs-700 {
+  font-size: var(--size-700);
+}
+.el-width-700 {
+  width: var(--size-700);
+}
+.el-width-800 {
+  width: var(--size-800);
+}
+.el-width-900 {
+  width: 4rem;
+}
+.el-width-1000 {
+  width: 5rem;
 }
 .text-light {
   color: var(--clr-light);
@@ -94,14 +121,15 @@
   font-weight: 400;
 }
 .btn-secondary {
-  padding: var(--size-100) var(--size-500);
+  padding: var(--size-250) var(--size-600);
+  font-size: var(--size-500);
 }
 .btn-secondary:hover {
   /* TODO: SHOULD ADD HLS white transparency */
   background-color: var(--clr-accent-secondary-300);
 }
 .container {
-  --max-width: 1000px;
+  --max-width: 97rem;
   margin-inline: auto;
   max-width: min(var(--max-width), (100% - var(--size-500)));
 }
@@ -118,10 +146,11 @@ button:hover {
   cursor: pointer;
 }
 input {
+  font-size: var(--size-450);
   max-width: 100%;
-  padding: var(--size-200) var(--size-700);
+  padding: var(--size-200) var(--size-800);
 
-  border: 2px solid var(--clr-neutral-300);
+  border: 1.5px solid var(--clr-neutral-300);
   border-radius: var(--size-200);
 }
 
@@ -133,6 +162,9 @@ input {
   box-shadow: 0 0 8px 8px var(--clr-neutral-600);
   position: relative;
   z-index: 1;
+
+  padding-top: var(--size-300);
+  padding-bottom: var(--size-300);
 }
 .primary-header_container {
   display: flex;
@@ -150,6 +182,7 @@ input {
   gap: var(--size-300);
 }
 .filters-container_list button {
+  letter-spacing: var(--size-70);
   background-color: transparent;
 }
 .filters-container_list button:hover {
@@ -160,8 +193,10 @@ input {
   background-color: hsl(0, 100%, 100%, 0.2);
 }
 @media all and (max-width: 550px) {
-  .logo > .name {
-    display: none;
+  .primary-header_container {
+    flex-direction: column;
+    gap: var(--size-500);
+    align-items: center;
   }
 }
 
@@ -178,6 +213,8 @@ input {
   background-repeat: no-repeat;
   background-size: var(--size-500);
   background-position: var(--size-300) 50%;
+
+  width: 22rem;
 }
 .search::placeholder {
   opacity: 1;
@@ -200,9 +237,22 @@ th {
   padding-right: var(--size-500);
   padding-bottom: var(--size-200);
 }
-.content_table td {
-  padding: var(--size-500);
+.content_table th {
+  padding: var(--size-400) var(--size-700);
 }
+.content_table td {
+  padding: var(--size-500) var(--size-700);
+}
+.content_table th {
+  letter-spacing: var(--size-70);
+}
+.content_table thead tr th:nth-child(1) {
+  width: 9rem;
+}
+.content_table th:nth-child(2) {
+  width: 21rem;
+}
+
 @media all and (max-width: 620px) {
   .content_header-container {
     flex-direction: column;
